--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url= jdbc:postgresql://localhost:5432/dev-spotlight
+spring.datasource.username=postgres
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-server.port=8888
