--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 # authenticantion
 spring.security.oauth2.client.registration.github.client-secret=0f493ef996e5bc380eead86d6f1fc2ca46e7426d
 spring.security.oauth2.client.registration.github.client-id=37a93236e0e10d7dffd0
+
+frontend.url=http://localhost:3000
