Feat(Project): add likes and remove

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/dev-spotlight
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # authenticantion
 spring.security.oauth2.client.registration.github.client-secret=0f493ef996e5bc380eead86d6f1fc2ca46e7426d
