--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>spring-security-oauth2-client</artifactId>
             <version>6.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.220</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
