feat(application-properties): variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/dev-spotlight
-spring.datasource.username=postgres
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 
-# authenticantion
-spring.security.oauth2.client.registration.github.client-secret=0f493ef996e5bc380eead86d6f1fc2ca46e7426d
-spring.security.oauth2.client.registration.github.client-id=37a93236e0e10d7dffd0
+# authentication
+spring.security.oauth2.client.registration.github.client-secret=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.client-id=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_ID}
 
-frontend.url=http://localhost:3000
+frontend.url=${FRONTEND_URL}
