--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,26 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.config.import=file:.env[.properties]
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+# Database Configuration
+# spring.datasource.username=ugabb
+# spring.datasource.password=alF4tSZb1pMQ
+# spring.datasource.url=jdbc:postgresql://ep-steep-dream-a5fsbzf8.us-east-2.aws.neon.tech/dev_spotlight_db?user=ugabb&password=alF4tSZb1pMQ&sslmode=require
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.datasource.url=jdbc:postgresql://ugabb:alF4tSZb1pMQ@ep-steep-dream-a5fsbzf8.us-east-2.aws.neon.tech/dev_spotlight_db?sslmode=require
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+# 
 # authentication
-spring.security.oauth2.client.registration.github.client-secret=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_SECRET}
-spring.security.oauth2.client.registration.github.client-id=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=0f493ef996e5bc380eead86d6f1fc2ca46e7426d
+# spring.security.oauth2.client.registration.github.client-secret=${env.SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.client-id=37a93236e0e10d7dffd0
+# spring.security.oauth2.client.registration.github.client-id=${env.SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_ID}
 
-frontend.url=${FRONTEND_URL}
+# frontend.url=${FRONTEND_URL}
 # spring.datasource.url= jdbc:postgresql://localhost:5432/dev-spotlight
 # spring.datasource.username=postgres
 # spring.datasource.password=password
@@ -17,4 +30,4 @@ frontend.url=${FRONTEND_URL}
 # spring.security.oauth2.client.registration.github.client-secret=0f493ef996e5bc380eead86d6f1fc2ca46e7426d
 # spring.security.oauth2.client.registration.github.client-id=37a93236e0e10d7dffd0
 
-# frontend.url=http://localhost:3000
+frontend.url=http://localhost:3000
